Mengirim project fullstack codi health perbaikan landing page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,16 @@
       integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" 
       crossorigin="anonymous" 
       referrerpolicy="no-referrer" 
-    />    
+    />
+
+    <!-- My Google Fonts -->
+    <link rel="preconnect" 
+          href="https://fonts.gstatic.com"
+    />
+    <link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" 
+          rel="stylesheet"
+    />
+
     <!-- 
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
