--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,12 +26,19 @@
     />
 
     <!-- My Google Fonts -->
-    <link rel="preconnect" 
-          href="https://fonts.gstatic.com"
-    />
-    <link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" 
-          rel="stylesheet"
-    />
+    <link 
+      rel="preconnect" 
+      href="https://fonts.googleapis.com"
+    >
+    <link 
+      rel="preconnect" 
+      href="https://fonts.gstatic.com" 
+      crossorigin
+    >
+    <link 
+      href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&family=Fredoka+One&display=swap" 
+      rel="stylesheet"
+    >
 
     <!-- 
       Notice the use of %PUBLIC_URL% in the tags above.
