Memperbaiki fitur tidak login

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,6 +26,13 @@
     />
 
     <!-- My Google Fonts -->
+    <link rel="preconnect" 
+          href="https://fonts.gstatic.com"
+    />
+    <link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" 
+          rel="stylesheet"
+    />
+
     <link 
       rel="preconnect" 
       href="https://fonts.googleapis.com"
